Fixedand Finished ex00 and ex01

--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -4,7 +4,7 @@ CC = c++
 
 FLAGS = -Werror -Wall -Wextra -std=c++98 -g
 
-SRC = main.cpp Animal.cpp Cat.cpp Dog.cpp 
+SRC = main.cpp Animal.cpp Cat.cpp Dog.cpp Brain.cpp
 
 RM = rm -f
 
